--- a/hugo.toml
+++ b/hugo.toml
@@ -1,17 +1,17 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
-title = "爱分享导航站"
+title = "开心导航站"
 theme = "hugo-webstack"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
 disablePathToLower = true
 
 #页脚：作者名字
-copyright = "afx"
+copyright = "久行"
 
 #网站信息，不显示，仅供搜索引擎参考
 [params]
-  keywords = "网址导航,webstack,hugo,vpn,科学上网，免费节点，爱分享，科技共享"
+  keywords = "网址导航,webstack,hugo,vpn,科学上网，免费节点，开心分享，科技共享"
   description = "Webstack Hugo版主题,网址导航"
 
 #是否开启搜索栏，true开启，false关闭
